BUG: Adjust helpbox location to prevent overlap

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -637,8 +637,8 @@
 
 #helpbox {
     position: fixed;
-    top: 100px;
-    left: 10px;
+    top: 10px;
+    left: 100px;
     width: 250px;
     max-height: 200px;
     overflow-y: scroll;
@@ -648,7 +648,7 @@
     border-radius: 8px;
     border: 1px solid #555;
     font-family: Arial, sans-serif;
-    z-index: 1000;
+    z-index: 10000;
 }
 
     #messages {
